--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ flutter:
   assets:
     - assets/
     - assets/images/mbooks.jpg
+    - assets/images/img-1.jpg
+    - assets/images/img-2.jpg
+    - assets/images/img-3.jpg
+    - assets/images/img-4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
