--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ flutter:
     - assets/images/img-2.jpg
     - assets/images/img-3.jpg
     - assets/images/img-4.jpg
+    - assets/images/food-1.webp
+    - assets/images/food-2.webp
+    - assets/images/food-3.jpg
+    - assets/images/food-4.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
