--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/data.json
     - assets/images/mbooks.jpg
     - assets/images/img-1.jpg
     - assets/images/img-2.jpg
